Fix problem with maven-surfire-plugin and openjdk 11